Fix slider flickering and make youtube iframes responsive in wysywig. #222.

--- a/docroot/themes/custom/dcc_theme/assets/scss/base/base.scss
+++ b/docroot/themes/custom/dcc_theme/assets/scss/base/base.scss
@@ -26,6 +26,8 @@ iframe {
 
 .youtube-container iframe {
   max-height: 60vw;
+  width: 100%;
+  height: 40vh;
 }
 
 .breadcrumb {
